# omp5tests

./: CMakeLists.txt
allocate/: CMakeLists.txt  allocate.cpp  dynTeamArray.cpp
amdMatmul/: CMakeLists.txt  matmul.c
associate_ptr/: CMakeLists.txt  associate_ptr.cpp
barrier/: CMakeLists.txt  barrier.cpp
cmakeConfigs/: cmakeLLVM_hsa.sh
globalConstexpr/: CMakeLists.txt  globalConstexpr.cpp
kernelStruct/: CMakeLists.txt  kernelStruct.cpp
literal/: CMakeLists.txt  literal.cpp
mapable/: CMakeLists.txt  mapStatic.cpp  mapStaticConst.cpp  mapable.cpp  simple.cpp
memberArray/: CMakeLists.txt  anyToInt.cpp  memberArray.cpp  structSize.cpp
nonInlineFct/: CMakeLists.txt  fct.cpp  fct.h  nonInlineFct.cpp
numDevices/: CMakeLists.txt  numDevices.cpp
onTargetMalloc/: CMakeLists.txt  onTargetMalloc.cpp
parallel/: CMakeLists.txt  parallel.cpp
templateInt/: CMakeLists.txt  templateInt.cpp
tuple/: CMakeLists.txt  README.md  tuple.cpp  tupleAlloc.cpp
virtual/: CMakeLists.txt  virtual.cpp
